<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginButton">login</string>
    <string name="username">user name</string>
    <string name="password">password</string>
    <string name="loginScreen">login Screen</string>
    <string name="welcome">welcome</string>
    <string name="next">next</string>
    <string name="new_login">new login</string>
    <string name="Company">Company</string>
    <string name="name">name</string>
    <string name="shoe_name">shoe name</string>
    <string name="shoe_size">shoe size</string>
    <string name="shoe_des">shoe description</string>
    <string name="logout">logout</string>
</resources>
